--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Programming/C#/Example/.vs
-Programming/C#/Example/.vscode
-Programming/C#/Example/Example/bin
-Programming/C#/Example/Example/obj
+Language/C#/Example/.vs
+Language/C#/Example/.vscode
+Language/C#/Example/Example/bin
+Language/C#/Example/Example/obj
