--- a/Framework/WinAPI/Example/Example/Example.vcxproj.filters
+++ b/Framework/WinAPI/Example/Example/Example.vcxproj.filters
@@ -17,6 +17,30 @@
     <Filter Include="Classes\Example_01 %28WinAPI 기초%29">
       <UniqueIdentifier>{f476e6c0-f954-47e7-ab66-e5c353875886}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\Global\Utility">
+      <UniqueIdentifier>{021f9b8b-d201-4c66-a7e5-549096405dd3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Global\Utility\Base">
+      <UniqueIdentifier>{ee2e37be-eab5-462f-8c95-54ab05a01ccf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Global\Utility\Interface">
+      <UniqueIdentifier>{2d0bc606-48ec-4311-a5e9-554983f05a7a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Global\Utility\Manager">
+      <UniqueIdentifier>{bf673ec6-99f9-4730-b500-5f3a047c6830}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Example_02 %28GDI 객체 - 1%29">
+      <UniqueIdentifier>{5e044d5c-ef80-4ecf-b4e6-08d07f88216d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Example_03 %28GDI 객체 - 2%29">
+      <UniqueIdentifier>{a2b64ed5-1153-4352-b6bd-917f27f3f842}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Example_04 %28GDI 객체 - 3%29">
+      <UniqueIdentifier>{edb0891e-e8b9-4a1b-97ff-6ccc879a2df5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\Example_05 %28더블 버퍼링%29">
+      <UniqueIdentifier>{66ce1f2e-0c00-4949-abc0-5ee1d5a9f34c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\Global\Define\KGDefine.h">
@@ -25,6 +49,36 @@
     <ClInclude Include="Classes\Example_01\Example_01.h">
       <Filter>Classes\Example_01 %28WinAPI 기초%29</Filter>
     </ClInclude>
+    <ClInclude Include="Classes\Global\Utility\Base\CWndApp.h">
+      <Filter>Classes\Global\Utility\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Global\Utility\Interface\IUpdateable.h">
+      <Filter>Classes\Global\Utility\Interface</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Global\Utility\Interface\IRenderable.h">
+      <Filter>Classes\Global\Utility\Interface</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Global\Utility\Interface\INoncopyable.h">
+      <Filter>Classes\Global\Utility\Interface</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example_02\Example_02.h">
+      <Filter>Classes\Example_02 %28GDI 객체 - 1%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Global\Utility\Manager\CTimeManager.h">
+      <Filter>Classes\Global\Utility\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Global\Utility\Manager\CInputManager.h">
+      <Filter>Classes\Global\Utility\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example_03\Example_03.h">
+      <Filter>Classes\Example_03 %28GDI 객체 - 2%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example_04\Example_04.h">
+      <Filter>Classes\Example_04 %28GDI 객체 - 3%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Example_05\Example_05.h">
+      <Filter>Classes\Example_05 %28더블 버퍼링%29</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Classes\Example.cpp">
@@ -32,6 +86,27 @@
     </ClCompile>
     <ClCompile Include="Classes\Example_01\Example_01.cpp">
       <Filter>Classes\Example_01 %28WinAPI 기초%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Global\Utility\Base\CWndApp.cpp">
+      <Filter>Classes\Global\Utility\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example_02\Example_02.cpp">
+      <Filter>Classes\Example_02 %28GDI 객체 - 1%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Global\Utility\Manager\CTimeManager.cpp">
+      <Filter>Classes\Global\Utility\Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Global\Utility\Manager\CInputManager.cpp">
+      <Filter>Classes\Global\Utility\Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example_03\Example_03.cpp">
+      <Filter>Classes\Example_03 %28GDI 객체 - 2%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example_04\Example_04.cpp">
+      <Filter>Classes\Example_04 %28GDI 객체 - 3%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Example_05\Example_05.cpp">
+      <Filter>Classes\Example_05 %28더블 버퍼링%29</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
